--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,23 @@
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 12px;
+    display: block;
+  }
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 12px;
+    background-clip: padding-box;
+    border: 4px solid transparent;
+  }
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  .custom-scrollbar:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3);
+  }
 }
 
 @layer base {
